Fri Aug 25 21:23:59 CEST 2006 (tk)
----------------------------------
  * freshclam/manager.c: "Cache-Control: no-cache" is now disabled by default.
			 If you're behind a broken proxy you can recompile
			 freshclam with --enable-no-cache.

Fri Aug 25 15:39:17 BST 2006 (njh)
----------------------------------
  * clamav-milter:	Tidy. Today's work seems to have removed the memory
				leak in the blacklist code.

Fri Aug 25 14:11:05 BST 2006 (njh)
----------------------------------
  * clamav-milter:	Fix a problem with multiple messages on the same
				connexion introduced earlier today

Fri Aug 25 11:22:24 BST 2006 (njh)
----------------------------------
  * clamav-milter:	Start a separate thread for each load balancing server
				that is being queried
			When not in internal mode, don't send headers to clamd
				that it will discard (cf usefulHeaders() in
				libclamav/mbox.c)

Wed Aug 23 07:54:15 BST 2006 (njh)
----------------------------------
  * clamav-milter:	--report-phish didn't work with --quarantine-dir

Sun Aug 20 20:43:44 BST 2006 (njh)
----------------------------------
  * libclamav/untar.c:	Ensure a file is open before closing on error return

Sat Aug 19 22:37:28 BST 2006 (njh)
----------------------------------
  * clamav-milter:	Use HAVE_CTIME_R_2 for older daily.cvd files -
				interim implementation of a patch suggestion by
				Mark Pizzolato

Fri Aug 18 15:40:30 BST 2006 (njh)
----------------------------------
  * clamav-milter:	Handle load balancing better when one machine of the
				cluster is down

Wed Aug 16 00:41:30 CEST 2006 (tk)
----------------------------------
  * freshclam/manager.c: correctly remove patches after applying

Tue Aug 15 16:07:11 BST 2006 (njh)
----------------------------------
  * libclamav/pdf.c:	Windows fix: handle more than 26 temporary files in
				a temporary directory

Sun Aug 13 22:13:45 CEST 2006 (tk)
----------------------------------
  * configure: add --enable-experimental switch
